--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "npm run build && node dist/index.js",
+    "dev": "ts-node src/index.ts",
     "build": "tsc",
     "lint": "eslint 'src/**/*.{ts,js}'"
   },
@@ -13,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.6",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
@@ -23,5 +25,13 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.10.0"
+  },
+  "dependencies": {
+    "@types/sequelize": "^4.28.20",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.4",
+    "sequelize-typescript": "^2.1.6"
   }
 }
