--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,26 @@
 services:
-  api:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
     environment:
       DB_HOST: db
-      DB_USER: user
-      DB_PASSWORD: password
-      DB_NAME: pesquisadb
-    volumes:
-      - .:/usr/src/app
-    command: npm start
+      DB_USER: app_user
+      DB_PASSWORD: my_secret
+      DB_NAME: researchdb
+      PORT: 3000
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+    command: ["/usr/app/wait-for-it.sh", "db:3306","-t", "60", "--", "node", "dist/index.js"]
 
   db:
     image: mysql:8.0
     environment:
-      DB_HOST: db
-      DB_USER: user
-      DB_PASSWORD: password
-      DB_NAME: pesquisadb
+      MYSQL_DATABASE: researchdb
+      MYSQL_USER: app_user
+      MYSQL_PASSWORD: my_secret
+      MYSQL_ROOT_PASSWORD: root_password
     ports:
       - "3306:3306"
-    volumes:
-      - mysql-data:/var/lib/mysql
-
-volumes:
-  mysql-data:
