--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       DB_HOST: db
       DB_USER: app_user
       DB_PASSWORD: my_secret
-      DB_NAME: researchdb
+      DB_NAME: surveysdb
       PORT: 3000
     ports:
       - "3000:3000"
@@ -18,7 +18,7 @@ services:
   db:
     image: mysql:8.0
     environment:
-      MYSQL_DATABASE: researchdb
+      MYSQL_DATABASE: surveysdb
       MYSQL_USER: app_user
       MYSQL_PASSWORD: my_secret
       MYSQL_ROOT_PASSWORD: root_password
