--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "npm run build && node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "lint": "eslint 'src/**/*.{ts,js}'"
+    "lint": "eslint 'src/**/*.{ts,js}'",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "@eslint/js": "^9.12.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.6",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
@@ -23,7 +25,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.31.0",
     "globals": "^15.11.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.10.0"
@@ -36,6 +40,7 @@
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.4",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "zod": "^3.23.8"
   }
 }
