--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,12 @@
+// tsconfig.json
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "rootDir": "./src",
-    "outDir": "./dist",
+    "target": "es6",
+    "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "skipLibCheck": true
+  }
 }
