--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.4",
     "sequelize-typescript": "^2.1.6",
